[tool.poetry]
name = "advent-2023"
version = "0.1.0"
description = "Solutions to Advent of Code 2023"
authors = ["Riccardo Tesselli <riccardo.tesselli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
more-itertools = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
