[tool.poetry]
name = "advent-2023"
version = "0.1.0"
description = "Solutions to Advent of Code 2023"
authors = ["Riccardo Tesselli <riccardo.tesselli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
more-itertools = "^10.1.0"
tqdm = "^4.66.1"
numpy = "^1.26.2"
joblib = "^1.3.2"
pqdm = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
